Fixed bug #72175

Make sure we don't close the connection we're trying to reuse...